--- a/public/assets/css/pricing.css
+++ b/public/assets/css/pricing.css
@@ -56,7 +56,7 @@ p {
 	text-align: center;
 	background-size: 100%;
 	width: 100%;
-	margin:38px 0 3em 0;
+	margin:38px 0 1em 0;
 	border-bottom: 1px solid #b7b7b7;
     -webkit-transition: background .15s .3s;
     -moz-transition: background .15s .3s;
@@ -99,8 +99,34 @@ p {
 	letter-spacing: 1px;
 	font-size: 3em;
 	margin-bottom: .5em;
-
 	}
+
+.featured {
+    margin: 0 auto 1em;
+    text-align: center;
+    max-width: 70%;
+    }
+
+.featured_ul {
+    list-style: none;
+    padding: 0;
+    }
+
+.featured_li {
+    display: inline-block;
+    margin-bottom: 10px;
+    margin-right: 7px;
+    font-size: 19px;
+    line-height: 1.3;
+    }
+
+.featured_li:after {
+    content: ','
+    }
+
+.featured_li:last-child:after {
+    content: ''
+    }
 
 .home-search {
 	margin-bottom: .7em;
